@@ -17,229 +17,376 @@
 package org.dizitart.no2.index;
 
 import org.dizitart.no2.NitriteConfig;
-import org.dizitart.no2.collection.Document;
 import org.dizitart.no2.collection.NitriteId;
-import org.dizitart.no2.common.UnknownType;
+import org.dizitart.no2.common.*;
 import org.dizitart.no2.common.tuples.Pair;
-import org.dizitart.no2.common.util.Iterables;
+import org.dizitart.no2.exceptions.FilterException;
+import org.dizitart.no2.exceptions.IndexingException;
 import org.dizitart.no2.exceptions.UniqueConstraintException;
 import org.dizitart.no2.exceptions.ValidationException;
+import org.dizitart.no2.filters.Filter;
+import org.dizitart.no2.filters.IndexedQuerySupport;
+import org.dizitart.no2.filters.NitriteFilter;
+import org.dizitart.no2.store.IndexCatalog;
 import org.dizitart.no2.store.NitriteMap;
 import org.dizitart.no2.store.NitriteStore;
 
-import java.util.Collection;
-import java.util.LinkedHashSet;
-import java.util.Set;
+import java.util.*;
+import java.util.concurrent.ConcurrentSkipListMap;
 import java.util.concurrent.ConcurrentSkipListSet;
 
+import static org.dizitart.no2.common.util.Iterables.getElementType;
 import static org.dizitart.no2.common.util.ObjectUtils.convertToObjectArray;
-import static org.dizitart.no2.common.util.ObjectUtils.deepEquals;
-import static org.dizitart.no2.common.util.ValidationUtils.*;
+import static org.dizitart.no2.common.util.ValidationUtils.validateArrayIndexField;
+import static org.dizitart.no2.common.util.ValidationUtils.validateIterableIndexField;
 
 /**
  * @author Anindya Chatterjee
  */
 @SuppressWarnings("rawtypes")
-public abstract class ComparableIndexer implements Indexer {
-    private NitriteStore<?> nitriteStore;
+public abstract class ComparableIndexer extends BaseNitriteIndexer {
+    protected IndexedQuerySupport querySupport;
+
+    public ComparableIndexer() {
+        querySupport = new IndexedQuerySupport(this);
+    }
 
     abstract boolean isUnique();
 
-    public ComparableIndexer clone() throws CloneNotSupportedException {
-        return (ComparableIndexer) super.clone();
-    }
-
     @Override
     public void initialize(NitriteConfig nitriteConfig) {
-        this.nitriteStore = nitriteConfig.getNitriteStore();
     }
 
     @Override
-    public void writeIndex(NitriteMap<NitriteId, Document> collection, NitriteId nitriteId, String field, Object fieldValue) {
-        validateIndexField(fieldValue, field);
-        addIndexEntry(collection.getName(), nitriteId, field, fieldValue);
+    public RecordStream<NitriteId> findByFilter(String collectionName, Filter filter, NitriteConfig nitriteConfig) {
+        if (filter instanceof NitriteFilter) {
+            NitriteFilter nitriteFilter = (NitriteFilter) filter;
+            IndexCatalog indexCatalog = nitriteConfig.getNitriteStore().getIndexCatalog();
+            Collection<IndexDescriptor> descriptors = indexCatalog.listIndexDescriptors(collectionName);
+
+
+            FieldValues fieldValues = querySupport.calculateFieldValues(nitriteFilter);
+            IndexDescriptor descriptor = new IndexDescriptor(getIndexType(), fieldValues.getFields(), collectionName);
+
+            NitriteMap<?, ?> indexMap = findSuitableIndexMap(descriptor, fieldValues, nitriteConfig.getNitriteStore());
+
+
+            return querySupport.findByFilter(indexMap, nitriteFilter, nitriteConfig);
+        } else {
+            throw new FilterException(filter.getClass().getName() + " is not supported");
+        }
+    }
+
+    //region Write Index
+
+    @Override
+    public void writeIndexEntry(IndexDescriptor indexDescriptor,
+                                FieldValues fieldValues,
+                                NitriteConfig nitriteConfig) {
+        if (isCompoundIndex(indexDescriptor)) {
+            writeCompoundIndexEntry(indexDescriptor, fieldValues, nitriteConfig);
+        } else {
+            writeSimpleIndexEntry(indexDescriptor, fieldValues, nitriteConfig);
+        }
     }
 
     @Override
-    public void removeIndex(NitriteMap<NitriteId, Document> collection, NitriteId nitriteId, String field, Object fieldValue) {
-        validateIndexField(fieldValue, field);
-        NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> indexMap = null;
+    public void removeIndexEntry(IndexDescriptor indexDescriptor,
+                                 FieldValues fieldValues,
+                                 NitriteConfig nitriteConfig) {
+        if (isCompoundIndex(indexDescriptor)) {
+            removeCompoundIndexEntry(indexDescriptor, fieldValues, nitriteConfig);
+        } else {
+            removeSimpleIndexEntry(indexDescriptor, fieldValues, nitriteConfig);
+        }
+    }
 
-        if (fieldValue == null) {
-            indexMap = getIndexMap(collection.getName(), field, UnknownType.class);
-            removeElementFromIndexMap(indexMap, nitriteId, field, null);
-        } else if (fieldValue instanceof Comparable) {
-            indexMap = getIndexMap(collection.getName(), field, fieldValue.getClass());
-            removeElementFromIndexMap(indexMap, nitriteId, field, (Comparable) fieldValue);
-        } else if (fieldValue.getClass().isArray()) {
-            Object[] array = convertToObjectArray(fieldValue);
+    private void writeCompoundIndexEntry(IndexDescriptor indexDescriptor,
+                                         FieldValues fieldValues,
+                                         NitriteConfig nitriteConfig) {
+        Fields fields = fieldValues.getFields();
+        List<String> fieldNames = fields.getFieldNames();
+
+        String firstField = fieldNames.get(0);
+        Object firstValue = fieldValues.get(firstField);
+
+        // NOTE: only first field can have array or iterable value, subsequent fields can not
+        validateIndexField(firstValue, firstField);
+
+        if (firstValue == null) {
+            NitriteMap<Comparable, NavigableMap<?, ?>> indexMap
+                = getCompoundIndexMap(indexDescriptor, nitriteConfig.getNitriteStore(), UnknownType.class);
+
+            addCompoundIndexElement(indexMap, fieldValues, null);
+        } else if (firstValue instanceof Comparable) {
+            NitriteMap<Comparable, NavigableMap<?, ?>> indexMap
+                = getCompoundIndexMap(indexDescriptor, nitriteConfig.getNitriteStore(), firstValue.getClass());
+
+            addCompoundIndexElement(indexMap, fieldValues, (Comparable) firstValue);
+        } else if (firstValue.getClass().isArray()) {
+            Object[] array = convertToObjectArray(firstValue);
+            NitriteMap<Comparable, NavigableMap<?, ?>> indexMap = getCompoundIndexMap(indexDescriptor,
+                nitriteConfig.getNitriteStore(), array.getClass().getComponentType());
 
             for (Object item : array) {
-                if (indexMap == null) {
-                    indexMap = getIndexMap(collection.getName(), field, item.getClass());
-                }
-                removeElementFromIndexMap(indexMap, nitriteId, field, (Comparable) item);
+                addCompoundIndexElement(indexMap, fieldValues, (Comparable) item);
             }
-        } else if (fieldValue instanceof Iterable) {
-            Iterable iterable = (Iterable) fieldValue;
+        } else if (firstValue instanceof Iterable) {
+            Iterable iterable = (Iterable) firstValue;
+            NitriteMap<Comparable, NavigableMap<?, ?>> indexMap = getCompoundIndexMap(indexDescriptor,
+                nitriteConfig.getNitriteStore(), getElementType(iterable));
+
             for (Object item : iterable) {
-                if (indexMap == null) {
-                    indexMap = getIndexMap(collection.getName(), field, item.getClass());
+                addCompoundIndexElement(indexMap, fieldValues, (Comparable) item);
+            }
+        }
+    }
+
+    private void writeSimpleIndexEntry(IndexDescriptor indexDescriptor,
+                                       FieldValues fieldValues,
+                                       NitriteConfig nitriteConfig) {
+        Fields fields = fieldValues.getFields();
+        List<String> fieldNames = fields.getFieldNames();
+
+        String firstField = fieldNames.get(0);
+        Object element = fieldValues.get(firstField);
+
+        if (element == null) {
+            NitriteMap<Comparable, NavigableSet<?>> indexMap
+                = getSimpleIndexMap(indexDescriptor, nitriteConfig.getNitriteStore(), UnknownType.class);
+
+            addSimpleIndexElement(indexMap, fieldValues, null);
+        } else if (element instanceof Comparable) {
+            NitriteMap<Comparable, NavigableSet<?>> indexMap
+                = getSimpleIndexMap(indexDescriptor, nitriteConfig.getNitriteStore(), element.getClass());
+
+            addSimpleIndexElement(indexMap, fieldValues, (Comparable) element);
+        } else if (element.getClass().isArray()) {
+            Object[] array = convertToObjectArray(element);
+            NitriteMap<Comparable, NavigableSet<?>> indexMap = getSimpleIndexMap(indexDescriptor,
+                nitriteConfig.getNitriteStore(), array.getClass().getComponentType());
+
+            for (Object item : array) {
+                addSimpleIndexElement(indexMap, fieldValues, (Comparable) item);
+            }
+        } else if (element instanceof Iterable) {
+            Iterable iterable = (Iterable) element;
+            NitriteMap<Comparable, NavigableSet<?>> indexMap = getSimpleIndexMap(indexDescriptor,
+                nitriteConfig.getNitriteStore(), getElementType(iterable));
+
+            for (Object item : iterable) {
+                addSimpleIndexElement(indexMap, fieldValues, (Comparable) item);
+            }
+        }
+    }
+
+    private void addCompoundIndexElement(NitriteMap<Comparable, NavigableMap<?, ?>> indexMap,
+                                         FieldValues fieldValues, Comparable element) {
+        NavigableMap<?, ?> subMap = indexMap.get(element);
+        if (subMap == null) {
+            SortOrder sortOrder = fieldValues.getFields().getFirstKey().getSecond();
+            subMap = sortOrder == SortOrder.Ascending ? new ConcurrentSkipListMap<>()
+                : new ConcurrentSkipListMap<>(Collections.reverseOrder());
+        }
+
+        populateSubMap(subMap, fieldValues, 1);
+        indexMap.put(element, subMap);
+    }
+
+    @SuppressWarnings("unchecked")
+    private void populateSubMap(NavigableMap subMap, FieldValues fieldValues, int startIndex) {
+        for (int i = startIndex; i < fieldValues.getValues().size(); i++) {
+            Pair<String, Object> pair = fieldValues.getValues().get(i);
+            Object value = pair.getSecond();
+            if (value == null) {
+                value = DBNull.getInstance();
+            }
+
+            if (!(value instanceof Comparable)) {
+                throw new IndexingException(value + " is not comparable");
+            }
+
+            if (i == fieldValues.getValues().size() - 1) {
+                NavigableSet<NitriteId> nitriteIds = (NavigableSet<NitriteId>) subMap.get(value);
+                nitriteIds = addNitriteIds(nitriteIds, fieldValues);
+                subMap.put(value, nitriteIds);
+            } else {
+                NavigableMap subMap2 = (NavigableMap) subMap.get(value);
+                if (subMap2 == null) {
+                    SortOrder sortOrder = fieldValues.getFields().getSortOrder(pair.getFirst());
+                    subMap2 = sortOrder == SortOrder.Ascending ? new ConcurrentSkipListMap<>()
+                        : new ConcurrentSkipListMap<>(Collections.reverseOrder());
                 }
-                removeElementFromIndexMap(indexMap, nitriteId, field, (Comparable) item);
+
+                populateSubMap(subMap2, fieldValues, startIndex + 1);
+                subMap.put(value, subMap2);
             }
         }
     }
 
-    @Override
-    public void updateIndex(NitriteMap<NitriteId, Document> collection, NitriteId nitriteId, String field, Object newValue, Object oldValue) {
-        validateIndexField(newValue, field);
-        validateIndexField(oldValue, field);
-        addIndexEntry(collection.getName(), nitriteId, field, newValue);
-        removeIndex(collection, nitriteId, field, oldValue);
+    @SuppressWarnings("unchecked")
+    private void addSimpleIndexElement(NitriteMap<Comparable, NavigableSet<?>> indexMap,
+                                       FieldValues fieldValues, Comparable element) {
+        NavigableSet<NitriteId> nitriteIds = (NavigableSet<NitriteId>) indexMap.get(element);
+        nitriteIds = addNitriteIds(nitriteIds, fieldValues);
+        indexMap.put(element, nitriteIds);
     }
 
-    @Override
-    public void dropIndex(NitriteMap<NitriteId, Document> collection, String field) {
-        // no action required
-    }
-
-    public Set<NitriteId> findEqual(String collectionName, String field, Comparable value) {
-        NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> indexMap =
-            value != null ? getIndexMap(collectionName, field, value.getClass())
-                : getIndexMap(collectionName, field, UnknownType.class);
-
-        Set<NitriteId> resultSet = null;
-        if (indexMap != null) {
-            resultSet = indexMap.get(value);
+    private NavigableSet<NitriteId> addNitriteIds(NavigableSet<NitriteId> nitriteIds, FieldValues fieldValues) {
+        if (nitriteIds == null) {
+            nitriteIds = new ConcurrentSkipListSet<>();
         }
 
-        if (resultSet == null) {
-            resultSet = new LinkedHashSet<>();
+        if (isUnique() && nitriteIds.size() == 1
+            && !nitriteIds.contains(fieldValues.getNitriteId())) {
+            // if key is already exists for unique type, throw error
+            throw new UniqueConstraintException("unique key constraint violation for " + fieldValues.getFields());
         }
-        return resultSet;
+
+        nitriteIds.add(fieldValues.getNitriteId());
+        return nitriteIds;
     }
 
-    public Set<NitriteId> findNotEqual(String collectionName, String field, Comparable value) {
-        NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> indexMap =
-            value != null ? getIndexMap(collectionName, field, value.getClass())
-                : getIndexMap(collectionName, field, UnknownType.class);
+    private void removeCompoundIndexEntry(IndexDescriptor indexDescriptor,
+                                          FieldValues fieldValues,
+                                          NitriteConfig nitriteConfig) {
+        Fields fields = fieldValues.getFields();
+        List<String> fieldNames = fields.getFieldNames();
 
-        Set<NitriteId> resultSet = new LinkedHashSet<>();
-        if (indexMap != null) {
-            for (Pair<Comparable, ConcurrentSkipListSet<NitriteId>> entry : indexMap.entries()) {
-                if (!deepEquals(entry.getFirst(), value)) {
-                    resultSet.addAll(entry.getSecond());
+        String firstField = fieldNames.get(0);
+        Object firstValue = fieldValues.get(firstField);
+
+        // NOTE: only first field can have array or iterable value, subsequent fields can not
+        validateIndexField(firstValue, firstField);
+
+        if (firstValue == null) {
+            NitriteMap<Comparable, NavigableMap<?, ?>> indexMap
+                = getCompoundIndexMap(indexDescriptor, nitriteConfig.getNitriteStore(), UnknownType.class);
+
+            removeCompoundIndexElement(indexMap, fieldValues, null);
+        } else if (firstValue instanceof Comparable) {
+            NitriteMap<Comparable, NavigableMap<?, ?>> indexMap
+                = getCompoundIndexMap(indexDescriptor, nitriteConfig.getNitriteStore(), firstValue.getClass());
+
+            removeCompoundIndexElement(indexMap, fieldValues, (Comparable) firstValue);
+        } else if (firstValue.getClass().isArray()) {
+            Object[] array = convertToObjectArray(firstValue);
+            NitriteMap<Comparable, NavigableMap<?, ?>> indexMap = getCompoundIndexMap(indexDescriptor,
+                nitriteConfig.getNitriteStore(), array.getClass().getComponentType());
+
+            for (Object item : array) {
+                removeCompoundIndexElement(indexMap, fieldValues, (Comparable) item);
+            }
+        } else if (firstValue instanceof Iterable) {
+            Iterable iterable = (Iterable) firstValue;
+            NitriteMap<Comparable, NavigableMap<?, ?>> indexMap = getCompoundIndexMap(indexDescriptor,
+                nitriteConfig.getNitriteStore(), getElementType(iterable));
+
+            for (Object item : iterable) {
+                removeCompoundIndexElement(indexMap, fieldValues, (Comparable) item);
+            }
+        }
+    }
+
+    private void removeSimpleIndexEntry(IndexDescriptor indexDescriptor,
+                                        FieldValues fieldValues,
+                                        NitriteConfig nitriteConfig) {
+        Fields fields = fieldValues.getFields();
+        List<String> fieldNames = fields.getFieldNames();
+
+        String firstField = fieldNames.get(0);
+        Object element = fieldValues.get(firstField);
+
+        if (element == null) {
+            NitriteMap<Comparable, NavigableSet<?>> indexMap
+                = getSimpleIndexMap(indexDescriptor, nitriteConfig.getNitriteStore(), UnknownType.class);
+
+            removeSimpleIndexElement(indexMap, fieldValues, null);
+        } else if (element instanceof Comparable) {
+            NitriteMap<Comparable, NavigableSet<?>> indexMap
+                = getSimpleIndexMap(indexDescriptor, nitriteConfig.getNitriteStore(), element.getClass());
+
+            removeSimpleIndexElement(indexMap, fieldValues, (Comparable) element);
+        } else if (element.getClass().isArray()) {
+            Object[] array = convertToObjectArray(element);
+            NitriteMap<Comparable, NavigableSet<?>> indexMap = getSimpleIndexMap(indexDescriptor,
+                nitriteConfig.getNitriteStore(), array.getClass().getComponentType());
+
+            for (Object item : array) {
+                removeSimpleIndexElement(indexMap, fieldValues, (Comparable) item);
+            }
+        } else if (element instanceof Iterable) {
+            Iterable iterable = (Iterable) element;
+            NitriteMap<Comparable, NavigableSet<?>> indexMap = getSimpleIndexMap(indexDescriptor,
+                nitriteConfig.getNitriteStore(), getElementType(iterable));
+
+            for (Object item : iterable) {
+                removeSimpleIndexElement(indexMap, fieldValues, (Comparable) item);
+            }
+        }
+    }
+
+    @SuppressWarnings("unchecked")
+    private void removeSimpleIndexElement(NitriteMap<Comparable, NavigableSet<?>> indexMap,
+                                       FieldValues fieldValues, Comparable element) {
+        NavigableSet<NitriteId> nitriteIds = (NavigableSet<NitriteId>) indexMap.get(element);
+        if (nitriteIds != null && !nitriteIds.isEmpty()) {
+            nitriteIds.remove(fieldValues.getNitriteId());
+            if (nitriteIds.size() == 0) {
+                indexMap.remove(element);
+            } else {
+                indexMap.put(element, nitriteIds);
+            }
+        }
+    }
+
+    private void removeCompoundIndexElement(NitriteMap<Comparable, NavigableMap<?, ?>> indexMap,
+                                            FieldValues fieldValues, Comparable element) {
+        NavigableMap<?, ?> subMap = indexMap.get(element);
+        if (subMap != null && !subMap.isEmpty()) {
+            deleteFromSubMap(subMap, fieldValues, 1);
+            indexMap.put(element, subMap);
+        }
+    }
+
+    @SuppressWarnings("unchecked")
+    private void deleteFromSubMap(NavigableMap subMap, FieldValues fieldValues, int startIndex) {
+        for (int i = startIndex; i < fieldValues.getValues().size(); i++) {
+            Pair<String, Object> pair = fieldValues.getValues().get(i);
+            Object value = pair.getSecond();
+            if (value == null) {
+                value = DBNull.getInstance();
+            }
+
+            if (!(value instanceof Comparable)) {
+                continue;
+            }
+
+            if (i == fieldValues.getValues().size() - 1) {
+                NavigableSet<NitriteId> nitriteIds = (NavigableSet<NitriteId>) subMap.get(value);
+                nitriteIds = removeNitriteIds(nitriteIds, fieldValues);
+                if (nitriteIds == null || nitriteIds.isEmpty()) {
+                    subMap.remove(value);
+                } else {
+                    subMap.put(value, nitriteIds);
                 }
-            }
-        }
-
-        return resultSet;
-    }
-
-    public Set<NitriteId> findGreaterThan(String collectionName, String field, Comparable comparable) {
-        Set<NitriteId> resultSet = new LinkedHashSet<>();
-        NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> indexMap =
-            comparable != null ? getIndexMap(collectionName, field, comparable.getClass())
-                : getIndexMap(collectionName, field, UnknownType.class);
-
-        if (indexMap != null) {
-            Comparable higherKey = indexMap.higherKey(comparable);
-            while (higherKey != null) {
-                resultSet.addAll(indexMap.get(higherKey));
-                higherKey = indexMap.higherKey(higherKey);
-            }
-        }
-
-        return resultSet;
-    }
-
-    public Set<NitriteId> findGreaterEqual(String collectionName, String field, Comparable comparable) {
-        Set<NitriteId> resultSet = new LinkedHashSet<>();
-        NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> indexMap =
-            comparable != null ? getIndexMap(collectionName, field, comparable.getClass())
-                : getIndexMap(collectionName, field, UnknownType.class);
-
-        if (indexMap != null) {
-            Comparable ceilingKey = indexMap.ceilingKey(comparable);
-            while (ceilingKey != null) {
-                resultSet.addAll(indexMap.get(ceilingKey));
-                ceilingKey = indexMap.higherKey(ceilingKey);
-            }
-        }
-
-        return resultSet;
-    }
-
-    public Set<NitriteId> findLesserThan(String collectionName, String field, Comparable comparable) {
-        Set<NitriteId> resultSet = new LinkedHashSet<>();
-        NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> indexMap =
-            comparable != null ? getIndexMap(collectionName, field, comparable.getClass())
-                : getIndexMap(collectionName, field, UnknownType.class);
-
-        if (indexMap != null) {
-            Comparable lowerKey = indexMap.lowerKey(comparable);
-            while (lowerKey != null) {
-                resultSet.addAll(indexMap.get(lowerKey));
-                lowerKey = indexMap.lowerKey(lowerKey);
-            }
-        }
-
-        return resultSet;
-    }
-
-    public Set<NitriteId> findLesserEqual(String collectionName, String field, Comparable comparable) {
-        Set<NitriteId> resultSet = new LinkedHashSet<>();
-        NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> indexMap =
-            comparable != null ? getIndexMap(collectionName, field, comparable.getClass())
-                : getIndexMap(collectionName, field, UnknownType.class);
-
-        if (indexMap != null) {
-            Comparable floorKey = indexMap.floorKey(comparable);
-            while (floorKey != null) {
-                resultSet.addAll(indexMap.get(floorKey));
-                floorKey = indexMap.lowerKey(floorKey);
-            }
-        }
-
-        return resultSet;
-    }
-
-    public Set<NitriteId> findIn(String collectionName, String field, Collection<Comparable<?>> values) {
-        notNull(values, "values cannot be null");
-        notEmpty(values, "values cannot be empty");
-
-        Set<NitriteId> resultSet = new LinkedHashSet<>();
-        Class<?> type = Iterables.firstOrNull(values).getClass();
-        NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> indexMap = getIndexMap(collectionName, field, type);
-
-        if (indexMap != null) {
-            for (Comparable comparable : indexMap.keySet()) {
-                if (values.contains(comparable)) {
-                    resultSet.addAll(indexMap.get(comparable));
+            } else {
+                NavigableMap subMap2 = (NavigableMap) subMap.get(value);
+                if (subMap2 == null) {
+                    continue;
                 }
+
+                deleteFromSubMap(subMap2, fieldValues, startIndex + 1);
+                subMap.put(value, subMap2);
             }
         }
-
-        return resultSet;
     }
 
-    public Set<NitriteId> findNotIn(String collectionName, String field, Collection<Comparable<?>> values) {
-        notNull(values, "values cannot be null");
-
-        Set<NitriteId> resultSet = new LinkedHashSet<>();
-        Class<?> type = Iterables.firstOrNull(values).getClass();
-        NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> indexMap = getIndexMap(collectionName, field, type);
-
-        if (indexMap != null) {
-            for (Comparable comparable : indexMap.keySet()) {
-                if (!values.contains(comparable)) {
-                    resultSet.addAll(indexMap.get(comparable));
-                }
-            }
+    private NavigableSet<NitriteId> removeNitriteIds(NavigableSet<NitriteId> nitriteIds, FieldValues fieldValues) {
+        if (nitriteIds != null && !nitriteIds.isEmpty()) {
+            nitriteIds.remove(fieldValues.getNitriteId());
         }
-
-        return resultSet;
+        return nitriteIds;
     }
 
     private void validateIndexField(Object value, String field) {
@@ -255,66 +402,16 @@ public abstract class ComparableIndexer implements Indexer {
         }
     }
 
-    private void addIndexEntry(String collectionName, NitriteId id, String field, Object element) {
-        NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> indexMap
-            = getIndexMap(collectionName, field, UnknownType.class);
+    //endregion
 
-        if (element == null) {
-            addElementToIndexMap(indexMap, id, field, null);
-        } else if (element instanceof Comparable) {
-            addElementToIndexMap(indexMap, id, field, (Comparable) element);
-        } else if (element.getClass().isArray()) {
-            Object[] array = convertToObjectArray(element);
-            for (Object item : array) {
-                addElementToIndexMap(indexMap, id, field, (Comparable) item);
-            }
-        } else if (element instanceof Iterable) {
-            Iterable iterable = (Iterable) element;
-            for (Object item : iterable) {
-                addElementToIndexMap(indexMap, id, field, (Comparable) item);
-            }
-        }
-    }
-
-    private void addElementToIndexMap(NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> indexMap,
-                                      NitriteId id, String field, Comparable element) {
-        // create the nitriteId list associated with the value
-        ConcurrentSkipListSet<NitriteId> nitriteIdList
-            = indexMap.get(element);
-
-        if (nitriteIdList == null) {
-            nitriteIdList = new ConcurrentSkipListSet<>();
-        }
-
-        if (isUnique() && nitriteIdList.size() == 1
-            && !nitriteIdList.contains(id)) {
-            // if key is already exists for unique type, throw error
-            throw new UniqueConstraintException("unique key constraint violation for " + field);
-        }
-
-        nitriteIdList.add(id);
-        indexMap.put(element, nitriteIdList);
-    }
-
-    private void removeElementFromIndexMap(NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> indexMap,
-                                           NitriteId nitriteId, String field, Comparable element) {
-        // create the nitrite list associated with the value
-        ConcurrentSkipListSet<NitriteId> nitriteIdList = indexMap.get(element);
-        if (nitriteIdList != null && !nitriteIdList.isEmpty()) {
-            nitriteIdList.remove(nitriteId);
-            if (nitriteIdList.size() == 0) {
-                indexMap.remove(element);
-            } else {
-                indexMap.put(element, nitriteIdList);
-            }
-        }
-    }
-
-    @SuppressWarnings("rawtypes")
-    private NitriteMap<Comparable, ConcurrentSkipListSet<NitriteId>> getIndexMap(
-        String collectionName, String field, Class<?> keyType) {
-
-        String mapName = getIndexMapName(collectionName, field);
-        return nitriteStore.openMap(mapName, keyType, ConcurrentSkipListSet.class);
+    private NitriteMap<?, ?> findSuitableIndexMap(IndexDescriptor descriptor,
+                                                  FieldValues fieldValues,
+                                                  NitriteStore<?> nitriteStore) {
+        // get all indices of a collection
+        // find the suitable index (prefix included)
+        // find the index map
+        // get value by prefix using filter (if compound)
+        // get value by filter (if simple)
+        return null;
     }
 }
